# doc-flow-bot

./: .gitignore  TZ.md  pyproject.toml
app/: config.py  main.py
app/config/: config.py  logging_config.py  yandex_disk.py
app/db/: base.py  models.py  repository.py
app/keyboards/: common.py
app/routers/: agent.py  common.py  lawyer.py  rop.py
app/services/: docgen.py  document_storage.py  notifier.py  protocol_filler.py  yandex_disk.py
app/templates/: protocol_template.doc  protocol_template.docx
app/utils/: role_guard.py
